# seance

./: .gitattributes  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .mise.toml  .prettierignore  .prettierrc.json  CLAUDE.md  Cargo.toml  LICENSE-APACHE  NOTES3.md  README.md  TODO.md  architecture.md  justfile  libghostty_vt_architecture.md  plan.md  rust-analyzer.toml
.cargo/: config.toml
.claude-notes/: plan.md
.github/workflows/: ci.yml
.pi/skills/seance-fidelity/: SKILL.md
crates/ghostty-renderer/: Cargo.toml
crates/ghostty-renderer-sys/: Cargo.toml  build.rs
crates/ghostty-renderer-sys/src/: lib.rs
crates/ghostty-renderer/src/: lib.rs
crates/seance-app/: Cargo.toml
crates/seance-app/src/: app.rs  apply.rs  command.rs  events.rs  io.rs  keybinds.rs  main.rs  mouse.rs  platform.rs  reload.rs  terminal.rs  watcher.rs  window_state.rs
crates/seance-bench/: Cargo.toml
crates/seance-bench/src/: gpu.rs  lib.rs  workloads.rs
crates/seance-config/: Cargo.toml
crates/seance-config/src/: diff.rs  lib.rs  schema.rs
crates/seance-config/src/theme/: bundled.rs  mod.rs  parser.rs  resolve.rs
crates/seance-gpu/: Cargo.toml
crates/seance-gpu/src/: lib.rs  pipeline.rs  state.rs  uniforms.rs
crates/seance-gpu/src/shaders/: cell.wgsl
crates/seance-input/: Cargo.toml
crates/seance-input/src/: keymap.rs  lib.rs
crates/seance-layout/: Cargo.toml
crates/seance-layout/src/: lib.rs
crates/seance-pty/: Cargo.toml
crates/seance-pty/src/: lib.rs
crates/seance-render/: Cargo.toml
crates/seance-render-test/: CLAUDE.md  Cargo.toml
crates/seance-render-test/src/: clock.rs  fonts.rs  lib.rs  rng.rs  world.rs
crates/seance-render-test/src/dump/: frame.rs  mod.rs
crates/seance-render-test/tests/: layer1_logic.rs  layer4_frame.rs
crates/seance-render-test/tests/snapshots/: layer4_frame__ansi_colors_annotate_per_cell_fg.snap  layer4_frame__box_drawing_renders_in_grid.snap  layer4_frame__empty_fixture_dumps_blank_grid.snap  layer4_frame__hello_world_fixture_shows_text_on_first_row.snap  layer4_frame__wide_chars_span_two_columns_each.snap
crates/seance-render/src/: lib.rs  renderer.rs  theme.rs
crates/seance-render/src/gpu/: atlas_texture.rs  dynamic_buffer.rs  mod.rs  pipeline.rs  state.rs  uniforms.rs
crates/seance-render/src/gpu/shaders/: cell.wgsl  image.wgsl
crates/seance-render/src/image/: builder.rs  cache.rs  mod.rs  pipeline.rs
crates/seance-render/src/text/: atlas.rs  backend.rs  cell_builder.rs  cosmic.rs  mod.rs  shape_cache.rs
crates/seance-terminal/: Cargo.toml
crates/seance-terminal/src/: lib.rs  renderer.rs  search.rs  selection.rs  terminal.rs  theme.rs
crates/seance-terminal/src/font/: atlas.rs  cache.rs  cell_builder.rs  mod.rs  system.rs
crates/seance-terminal/src/gpu/: mod.rs  pipeline.rs  state.rs  uniforms.rs
crates/seance-terminal/src/gpu/shaders/: cell.wgsl
crates/seance-vt/: Cargo.toml
crates/seance-vt/src/: frame.rs  frame_source.rs  kitty_placeholder.rs  lib.rs  modes.rs  selection.rs  terminal.rs  test_support.rs
docs/: LIBGHOSTTY_ANALYSIS.md  MITCHELL_QUOTES.md  NOTES.md  NOTES2.md  README_ANALYSIS.md  architecture.md  libghostty_renderer_patterns.md  plan_libghostty_renderer_v2.md  threading.md
tools/: make-app.sh  run.sh  setup-ghostty-src.sh  setup-sysroot.sh  setup-themes.sh  xcrun  zig
tools/fidelity/: README.md  capture_pair.sh  compare.py  fixture.sh  window_info.swift
