[workspace]
resolver = "3"
members = [
    "crates/seance-input",
    "crates/seance-vt",
    "crates/seance-render",
    "crates/seance-config",
    "crates/seance-app",
    "crates/seance-bench",
    "crates/seance-render-test",
]

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unused_lifetimes = "warn"

# Crank clippy as strict as practical: warn on every lint in the `pedantic`
# and `nursery` groups, then explicitly opt out of the lints that produce
# more noise than insight in this codebase. Group entries use priority = -1
# so individual lint settings below override the group default.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# --- Opinionated style lints we don't want enforced workspace-wide ---
module_name_repetitions = "allow"   # e.g. `Config` in `seance-config` is fine
similar_names = "allow"             # `cell_w` / `cell_h`, `bg` / `fg`, etc.
too_many_lines = "allow"            # render/event-loop fns are inherently long
too_long_first_doc_paragraph = "allow"
if_not_else = "allow"
single_match_else = "allow"         # match reads better when arms balance
option_if_let_else = "allow"        # `if let / else` is often clearer
items_after_statements = "allow"    # local consts inside fns are idiomatic
inline_always = "allow"             # we use it intentionally
trivially_copy_pass_by_ref = "allow"
needless_pass_by_value = "allow"    # too many false positives in our APIs
default_trait_access = "allow"      # `..Default::default()` is conventional
redundant_closure_for_method_calls = "allow"
wildcard_imports = "allow"          # tests use `use super::*;`

# --- "Add docs / must_use everywhere" lints — too churny for this stage ---
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"              # tech terms (wgpu, VT, PTY) trip it up
missing_const_for_fn = "allow"      # nursery; const-fn rules shift over time

# --- Numeric / cast lints — render code does many intentional casts ---
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_ptr_alignment = "allow"
unreadable_literal = "allow"        # color hex / xterm constants
struct_excessive_bools = "allow"    # config sections are bag-of-bools by design

# --- Test-friendly allowances ---
float_cmp = "allow"                 # tests assert on parsed literal floats
needless_raw_string_hashes = "allow"  # `r#"..."#` is fine for TOML test input

# --- Nursery lints with high false-positive rates ---
or_fun_call = "allow"
branches_sharing_code = "allow"
redundant_pub_crate = "allow"
suboptimal_flops = "allow"

# --- Existing workspace lint, kept explicit ---
collapsible_if = "warn"

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
libc = "0.2"
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs", rev = "dfac6f3e", default-features = false, features = ["kitty-graphics", "png"] }
insta = { version = "1", features = ["glob", "yaml"] }
pretty_assertions = "1"
rand_pcg = "0.3"
