[workspace]
resolver = "3"
members = [
    "crates/seance-input",
    "crates/seance-vt",
    "crates/seance-render",
    "crates/seance-config",
    "crates/seance-app",
    "crates/seance-bench",
    "crates/seance-render-test",
]

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]
collapsible_if = "warn"

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
libc = "0.2"
libghostty-vt = { git = "https://github.com/xkef/libghostty-rs", rev = "02c0b67331589479cbcdee9dd7ed38c0c2ff6a7d", default-features = false, features = ["kitty-graphics", "png"] }
insta = { version = "1", features = ["glob", "yaml"] }
pretty_assertions = "1"
rand_pcg = "0.3"
