[package]
name = "ghostty-renderer-sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Raw FFI bindings to libghostty-renderer"
links = "ghostty-renderer"

[build-dependencies]

[lints]
workspace = true

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
libc.workspace = true
