[package]
name = "seance-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "seance terminal multiplexer application"

[[bin]]
name = "seance"
path = "src/main.rs"

[dependencies]
ghostty-renderer = { path = "../ghostty-renderer" }
seance-pty = { path = "../seance-pty" }
seance-layout = { path = "../seance-layout" }
seance-input = { path = "../seance-input" }
log.workspace = true
env_logger.workspace = true
winit = "0.30"
raw-window-handle = "0.6"
