[package]
name = "seance-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "seance terminal multiplexer application"

[[bin]]
name = "seance"
path = "src/main.rs"

[dependencies]
ghostty-renderer = { path = "../ghostty-renderer" }
seance-gpu = { path = "../seance-gpu" }
seance-pty = { path = "../seance-pty" }
seance-layout = { path = "../seance-layout" }
seance-input = { path = "../seance-input" }
pollster = "0.4"
log.workspace = true
env_logger.workspace = true
winit = "0.30"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSGeometry"] }
