[package]
name = "seance-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Frame-time bench harness for M2 perf work (CPU + headless GPU submit)"
publish = false

[[bin]]
name = "frame-time"
path = "src/bin/frame_time.rs"

[dependencies]
pollster = "0.4"
wgpu = "29"

[lints]
workspace = true
