[package]
name = "seance-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Configuration and theme loading for seance (TOML config, Ghostty-syntax themes)"

[dependencies]
log.workspace = true
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[lints]
workspace = true
