[package]
name = "seance-gpu"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "wgpu renderer for seance, consuming libghostty-renderer Level 2 data"

[dependencies]
ghostty-renderer = { path = "../ghostty-renderer" }
wgpu = "29"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
raw-window-handle = "0.6"
log.workspace = true
