[package]
name = "seance-pty"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "PTY spawning and I/O for seance"

[dependencies]
libc.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["term", "signal", "process", "poll", "fs"] }
