[package]
name = "seance-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "GPU-accelerated text rendering for seance (cosmic-text + wgpu)"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
cosmic-text = "0.18"
etagere = "0.3"
log.workspace = true
rustc-hash = "2"
seance-config = { path = "../seance-config" }
seance-vt = { path = "../seance-vt" }
wgpu = "29"
winit = "0.30"

[lints]
workspace = true
