[package]
name = "seance-terminal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "High-level terminal emulator with GPU rendering, search, and selection"

[dependencies]
cosmic-text = "0.18"
etagere = "0.2"
rustc-hash = "2"
libc.workspace = true
libghostty-vt.workspace = true
portable-pty = "0.9"
seance-input = { path = "../seance-input" }
wgpu = "29"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
log.workspace = true

[lints]
workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
raw-window-handle = "0.6"
